终于解决了FastJson和Gson共存的尴尬局面